router1/scriptFiles/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 443 10.0.3.15 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -d 10.0.3.15 --dport 443 -j ACCEPT

-A ufw-user-forward -p tcp -d 192.168.3.101 --dport 5173 -j ACCEPT

-A ufw-user-forward -p tcp -d 192.168.4.101 --dport 3000 -s 192.168.3.101 -j ACCEPT

-A ufw-user-forward -p tcp -d 192.168.5.101 --dport 4000 -s 192.168.3.101 -j ACCEPT

-A ufw-user-forward -p tcp -d 192.168.10.101 --dport 5000 -s 192.168.4.101 -j ACCEPT

-A ufw-user-input -p tcp -s 192.168.2.101 -j ACCEPT

-A ufw-user-input -p tcp -s 192.168.5.101 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
